# MotionEngine

./: .gitmodules
controller/: CMakeLists.txt  Controller.cpp  FootStepPlanner.cpp  FootStepPlanner.hpp  Kinematics.cpp  Kinematics.hpp  MotionEngine.cpp  MotionEngine.hpp  PreviewController.cpp  PreviewController.hpp  plot.py  test_foot_step_planner.cpp  utils.hpp
docker/: Dockerfile
model/: JAXONmain.yaml
project/: sample.cnoid
